--- a/vw/index.less
+++ b/vw/index.less
@@ -2,12 +2,12 @@
 
 /* 单位px转化为vw */
 .px2vw(@property, @px) {
-	@{property}: (@px / @design_width * 100)vw;
+	@{property}: unit(@px / @design_width * 100, vw);
 }
 
 /* 单位vw转化为px，可用于根据vw单位快速计算原px */
 .vw2px(@property, @vw) {
-	@{property}: (@vw / 100 * @design_width)px;
+	@{property}: unit(@vw / 100 * @design_width, px);
 }
 
 /*
